--- a/src/app/allModules/pages/dashboard/dashboard.component.scss
+++ b/src/app/allModules/pages/dashboard/dashboard.component.scss
@@ -165,8 +165,9 @@
     color: white;
   }
   .tile {
+    @include mat-elevation(2);
     min-height: 60px !important;
-    max-height: 100px !important;
+    max-height: 250px !important;
     img {
       height: 36px;
     }
@@ -208,5 +209,25 @@
   }
   .subHeader {
     font-weight: 500;
+  }
+  .outer-circle {
+    height: 100px;
+    width: 100px;
+    border: 3px dashed red;
+    border-radius: 50%;
+    position: relative;
+  }
+  .inner-circle {
+    height: 75px;
+    width: 75px;
+    border: 1px solid #f3705a;
+    border-radius: 50%;
+    background-color: white;
+    position: absolute;
+    top: 11%;
+    left: 11%;
+  }
+  .chart-legend .legend-labels{
+    width: 100px;
   }
 }
