--- a/src/app/allModules/pages/dashboard/dashboard.component.html
+++ b/src/app/allModules/pages/dashboard/dashboard.component.html
@@ -6,10 +6,17 @@
           <span class="boldClass orangeBorderBottom pl-8"> Time In Full (OTIF)</span>
         </div>
         <div fxFlex fxLayoutAlign="center" class="pt-8">
-          <circle-progress [percent]="85" [radius]="60" [subtitleFormat]="formatSubtitle" [subtitleColor]="'#ee4057'"
-            [outerStrokeWidth]="5" [innerStrokeWidth]="2" [outerStrokeColor]="'#f3705a'" [innerStrokeColor]="'#f3705a'">
-          </circle-progress>
-
+          <svg height="140" width="140" viewBox="0 0 140 140" class="progress__svg">
+            <circle class="progress__meter" [style.strokeDasharray]="2" cx="70" cy="70" [attr.r]="radius"
+              stroke-width="10" />
+            <circle class="progress__value" [style.strokeDasharray]="circumference"
+              [style.strokeDashoffset]="1-dashoffset1" cx="70" cy="70" [attr.r]="radius" stroke-width="10" />
+            <circle r="49" cx="70" cy="70" stroke="#f3705a" stroke-width="2" fill="none" class="inner-circle" />
+            <text text-anchor="middle" alignment-baseline="middle" transform="rotate(90,70,70)">
+              <tspan x="70" y="70" dy="-0.18em" font-size="20">{{progressPercentage1}}%</tspan>
+              <tspan x="70" y="70" dy="0.82em" font-size="10" class="progressSubtitle">Effiency</tspan>
+            </text>
+          </svg>
         </div>
       </div>
       <div class="tile mx-20" fxFlex="17" fxLayout="column" fxLayoutAlign="start">
@@ -17,24 +24,23 @@
           <span class="boldClass orangeBorderBottom pl-8"> Quality Index</span>
         </div>
         <div fxFlex fxLayoutAlign="center" class="pt-8">
-          <circle-progress [percent]="97" [radius]="60" [showSubtitle]="false" [subtitleColor]="'#ee4057'"
-            [outerStrokeWidth]="5" [innerStrokeWidth]="2" [outerStrokeColor]="'#f3705a'" [innerStrokeColor]="'#f3705a'"
-            [animation]="true" [animationDuration]="300">
-          </circle-progress>
-
+          <svg height="140" width="140" viewBox="0 0 140 140" class="progress__svg">
+            <circle class="progress__meter" [style.strokeDasharray]="2" cx="70" cy="70" [attr.r]="radius"
+              stroke-width="10" />
+            <circle class="progress__value" [style.strokeDasharray]="circumference"
+              [style.strokeDashoffset]="1-dashoffset2" cx="70" cy="70" [attr.r]="radius" stroke-width="10" />
+            <circle r="49" cx="70" cy="70" stroke="#f3705a" stroke-width="2" fill="none" class="inner-circle" />
+            <text text-anchor="middle" alignment-baseline="middle" transform="rotate(90,70,70)">
+              <tspan x="70" y="70" dy="0.18em" font-size="20">{{progressPercentage2}}%</tspan>
+            </text>
+          </svg>
         </div>
       </div>
       <div class="tile mx-20" fxFlex="25" fxLayout="column" fxLayoutAlign="start">
         <div fxLayoutAlign="start center" class="pt-8">
           <span class="boldClass orangeBorderBottom pl-8"> Fulfilment </span>
         </div>
-        <div id="doughnutChart" fxFlex fxLayoutAlign="start" class="pt-8">
-          <!-- <ngx-charts-pie-chart [view]="[200, 150]" [scheme]="{domain: ['#fb863a', '#40a8e2', '#485865','#40ed9a']}"
-            [results]="Fulfilments" [doughnut]="true" [labels]="false" [legend]="true" [legendTitle]="''"
-            [labelFormatting]="pieChartLabel.bind(this, Fulfilments)">
-          </ngx-charts-pie-chart> -->
-          <!-- <ngx-donut-chart [data]="donutChartData" [title]="'Sessions'" [radius]="88" [thickness]="10" [margin]="30">
-          </ngx-donut-chart> -->
+        <div id="doughnutChart" fxFlex fxLayoutAlign="start" class="pt-8 pl-8 pr-4">
           <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType"
             [options]="doughnutChartOptions" [colors]="colors">
           </canvas>
@@ -47,13 +53,7 @@
         <div fxLayoutAlign="start" class="pt-8">
           <span class="boldClass orangeBorderBottom pl-8"> Delivery status </span>
         </div>
-        <div id="barChart" fxFlex fxLayoutAlign="start" class="pt-8">
-          <!-- <ngx-charts-bar-vertical-2d [view]="[250,150]" [scheme]="{domain: ['#fb863a', '#40a8e2']}"
-            [results]="DeliveryStatus" [gradient]="true" [xAxis]="true" [yAxis]="true" [legend]="true"
-            [showXAxisLabel]="false" [showYAxisLabel]="false" [legendTitle]="''">
-          </ngx-charts-bar-vertical-2d> -->
-          <!-- <ngx-donut-chart [data]="donutChartData" [title]="'Sessions'" [radius]="88" [thickness]="10" [margin]="30">
-          </ngx-donut-chart> -->
+        <div id="barChart" fxFlex fxLayoutAlign="start" class="pt-0 px-8">
           <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
             [legend]="barChartLegend" [chartType]="barChartType" [colors]="barColors">
           </canvas>
@@ -67,7 +67,7 @@
           <input [(ngModel)]="searchText" type="text" placeholder="Search" fxFlex>
         </div>
         <div fxFlex class="mr-24" align="end">
-          <mat-form-field>
+          <mat-form-field appearance="outline" style="width: 120px;">
             <mat-select [(ngModel)]="FilterVal">
               <mat-option value="All">All</mat-option>
             </mat-select>
@@ -151,13 +151,21 @@
 
           <ng-container matColumnDef="NextProcess">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> NextProcess </th>
-            <td mat-cell *matCellDef="let element"> {{element.NextProcess}} </td>
+            <td mat-cell *matCellDef="let element">
+              <span class="next">{{element.NextProcess}}
+              </span>
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="Action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Action </th>
             <td mat-cell *matCellDef="let element" style="text-align: center;">
-              <button mat-stroked-button>Actions</button>
+              <!-- <button mat-stroked-button>Actions</button> -->
+              <mat-form-field appearance="outline" style="width: 120px;">
+                <mat-select [(ngModel)]="ActionModel">
+                  <mat-option value="Actions">Actions</mat-option>
+                </mat-select>
+              </mat-form-field>
             </td>
           </ng-container>
 
