--- a/src/app/allModules/pages/dashboard/dashboard.component.html
+++ b/src/app/allModules/pages/dashboard/dashboard.component.html
@@ -1,84 +1,25 @@
 <div id="dashboard" class="page-layout carded" fusePerfectScrollbar>
   <div class="center" fxLayout="column" fxLayoutGap="10px">
-    <div fxFlex fxLayout class="p-24">
-      <div class="tile mr-20" fxFlex="17" fxLayout="column" fxLayoutAlign="start">
-        <div fxLayoutAlign="start center" class="pt-8">
-          <span class="boldClass orangeBorderBottom pl-8"> Time In Full (OTIF)</span>
-        </div>
-        <div fxFlex fxLayoutAlign="center" class="pt-8">
-          <svg height="140" width="140" viewBox="0 0 140 140" class="progress__svg">
-            <circle class="progress__meter" [style.strokeDasharray]="2" cx="70" cy="70" [attr.r]="radius"
-              stroke-width="10" />
-            <circle class="progress__value" [style.strokeDasharray]="circumference"
-              [style.strokeDashoffset]="1-dashoffset1" cx="70" cy="70" [attr.r]="radius" stroke-width="10" />
-            <circle r="49" cx="70" cy="70" stroke="#f3705a" stroke-width="2" fill="none" class="inner-circle" />
-            <text text-anchor="middle" alignment-baseline="middle" transform="rotate(90,70,70)">
-              <tspan x="70" y="70" dy="-0.18em" font-size="20">{{progressPercentage1}}%</tspan>
-              <tspan x="70" y="70" dy="0.82em" font-size="10" class="progressSubtitle">Effiency</tspan>
-            </text>
-          </svg>
-        </div>
-      </div>
-      <div class="tile mx-20" fxFlex="17" fxLayout="column" fxLayoutAlign="start">
-        <div fxLayoutAlign="start center" class="pt-8">
-          <span class="boldClass orangeBorderBottom pl-8"> Quality Index</span>
-        </div>
-        <div fxFlex fxLayoutAlign="center" class="pt-8">
-          <svg height="140" width="140" viewBox="0 0 140 140" class="progress__svg">
-            <circle class="progress__meter" [style.strokeDasharray]="2" cx="70" cy="70" [attr.r]="radius"
-              stroke-width="10" />
-            <circle class="progress__value" [style.strokeDasharray]="circumference"
-              [style.strokeDashoffset]="1-dashoffset2" cx="70" cy="70" [attr.r]="radius" stroke-width="10" />
-            <circle r="49" cx="70" cy="70" stroke="#f3705a" stroke-width="2" fill="none" class="inner-circle" />
-            <text text-anchor="middle" alignment-baseline="middle" transform="rotate(90,70,70)">
-              <tspan x="70" y="70" dy="0.18em" font-size="20">{{progressPercentage2}}%</tspan>
-            </text>
-          </svg>
-        </div>
-      </div>
-      <div class="tile mx-20" fxFlex="25" fxLayout="column" fxLayoutAlign="start">
-        <div fxLayoutAlign="start center" class="pt-8">
-          <span class="boldClass orangeBorderBottom pl-8"> Fulfilment </span>
-        </div>
-        <div id="doughnutChart" fxFlex fxLayoutAlign="start" class="pt-8 pl-8 pr-4">
-          <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType"
-            [options]="doughnutChartOptions" [colors]="colors">
-          </canvas>
-        </div>
-        <div fxFlex fxLayout fxLayoutAlign="end center">
-          <div fxFlex class="doughnutChartPosition boldClass"> Fulfilment status </div>
-        </div>
-      </div>
-      <div class="tile mx-20" fxFlex="41" fxLayout="column" fxLayoutAlign="start">
-        <div fxLayoutAlign="start" class="pt-8">
-          <span class="boldClass orangeBorderBottom pl-8"> Delivery status </span>
-        </div>
-        <div id="barChart" fxFlex fxLayoutAlign="start" class="pt-0 px-8">
-          <canvas #barCanvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
-            [legend]="barChartLegend" [chartType]="barChartType" [colors]="barColors">
-          </canvas>
-        </div>
-      </div>
-    </div>
     <div class="sidenav-content px-24 mt-4" fxFlex>
-      <div fxLayout="row" fxLayoutAlign="space-between center">
+      <div fxLayout="row" fxLayoutAlign="space-between center" style="margin-bottom: 20px;">
         <div class="search" fxFlex fxLayout="row" fxLayoutAlign="start center">
           <mat-icon class="s-16">search</mat-icon>
           <input [(ngModel)]="searchText" type="text" placeholder="Search" fxFlex>
         </div>
         <div fxFlex class="mr-24" align="end">
-          <mat-form-field appearance="outline" style="width: 120px;">
+          <!-- <mat-form-field appearance="outline" style="width: 120px;">
             <mat-select [(ngModel)]="FilterVal">
               <mat-option value="All">All</mat-option>
             </mat-select>
-          </mat-form-field>
+          </mat-form-field> -->
         </div>
       </div>
       <div fxLayout>
-        <table *ngIf="Pos?.length" class="table" mat-table [dataSource]="posDataSource" matSort>
+        <table *ngIf="AllVendorOnBoardings?.length" class="table" mat-table [dataSource]="VendorOnBoardingsDataSource"
+          matSort>
 
           <ng-container matColumnDef="TransID">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> PO </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> TransID </th>
             <td mat-cell *matCellDef="let element;let odd=odd" class="tableLeftBorder pl-0">
               <div fxLayout>
                 <div class="tableCellBorder" [style.background-color]="odd?'#6f52ed':'#d87e39'"></div>
@@ -87,19 +28,56 @@
             </td>
           </ng-container>
 
-
-          <ng-container matColumnDef="Version">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
+          <ng-container matColumnDef="Name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
             <td mat-cell *matCellDef="let element">
-              {{element.Version}} </td>
+              {{element.Name}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="PODate">
+          <ng-container matColumnDef="LegalName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Legal Name </th>
+            <td mat-cell *matCellDef="let element">
+              {{element.LegalName}} </td>
+          </ng-container>
+
+          <!-- <ng-container matColumnDef="LegalName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> LegalName </th>
+            <td mat-cell *matCellDef="let element">
+              <span class="next">{{element.LegalName}}
+              </span>
+            </td>
+          </ng-container> -->
+
+          <ng-container matColumnDef="Type">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+            <td mat-cell *matCellDef="let element">
+              {{element.Type}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="Country">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Country </th>
+            <td mat-cell *matCellDef="let element">
+              {{element.Country}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="Phone1">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone1 </th>
+            <td mat-cell *matCellDef="let element">
+              {{element.Phone1}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="Email1">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Email1 </th>
+            <td mat-cell *matCellDef="let element">
+              {{element.Email1}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="CreatedOn">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.PODate | date :'dd/MM/yyyy'}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.CreatedOn | date :'dd/MM/yyyy'}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="Status">
+          <!-- <ng-container matColumnDef="Status">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
             <td mat-cell *matCellDef="let element" style="width:400px">
               <div fxLayout class="mt-4 mr-40 ml-8">
@@ -126,15 +104,15 @@
                 </div>
               </div>
               <div fxLayout class="mr-40 ml-8">
-                <div fxFlex="30">PO</div>
+                <div fxFlex="30">VendorOnBoardings</div>
                 <div fxFlex="30">ASN</div>
                 <div fxFlex="30">Gate</div>
                 <div fxFlex="10">GRN</div>
               </div>
             </td>
-          </ng-container>
+          </ng-container> -->
 
-          <ng-container matColumnDef="Document">
+          <!-- <ng-container matColumnDef="Document">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Document </th>
             <td mat-cell *matCellDef="let element">
               <div fxLayout class="Rectangle">
@@ -147,30 +125,18 @@
                 </div>
               </div>
             </td>
-          </ng-container>
-
-          <ng-container matColumnDef="NextProcess">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> NextProcess </th>
-            <td mat-cell *matCellDef="let element">
-              <span class="next">{{element.NextProcess}}
-              </span>
-            </td>
-          </ng-container>
+          </ng-container> -->
 
           <ng-container matColumnDef="Action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Action </th>
             <td mat-cell *matCellDef="let element" style="text-align: center;">
-              <!-- <button mat-stroked-button>Actions</button> -->
-              <mat-form-field appearance="outline" style="width: 120px;">
-                <mat-select [(ngModel)]="ActionModel">
-                  <mat-option value="Actions">Actions</mat-option>
-                </mat-select>
-              </mat-form-field>
+              <button mat-stroked-button style="cursor: pointer !important;"
+                (click)="ReviewAndApproveVendor(element)">Approve</button>
             </td>
           </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="posDisplayedColumns;sticky: true"></tr>
-          <tr mat-row *matRowDef="let row; columns: posDisplayedColumns;let even=even" matRipple
+          <tr mat-header-row *matHeaderRowDef="VendorOnBoardingsDisplayedColumns;sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: VendorOnBoardingsDisplayedColumns;let even=even" matRipple
             style=" cursor: pointer;">
           </tr>
         </table>
